[package]
name = "atomic-cache-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }
x86 = "0.52.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "cache_benchmark"
harness = false
